App :  testeo de método Sub

--- a/CalculatorService.Client/CalculatorService.Client.csproj
+++ b/CalculatorService.Client/CalculatorService.Client.csproj
@@ -50,6 +50,10 @@
     <Compile Include="CalculatorService.cs" />
     <Compile Include="Models\AddRequest.cs" />
     <Compile Include="Models\AddResponse.cs" />
+    <Compile Include="Models\MultRequest.cs" />
+    <Compile Include="Models\MultResponse.cs" />
+    <Compile Include="Models\SubRequest.cs" />
+    <Compile Include="Models\SubResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
