--- a/CalculatorService.Client/CalculatorService.Client.csproj
+++ b/CalculatorService.Client/CalculatorService.Client.csproj
@@ -51,11 +51,15 @@
     <Compile Include="CalculatorService.cs" />
     <Compile Include="Models\AddRequest.cs" />
     <Compile Include="Models\AddResponse.cs" />
+    <Compile Include="Models\DivRequest.cs" />
+    <Compile Include="Models\DivResponse.cs" />
     <Compile Include="Models\MultRequest.cs" />
     <Compile Include="Models\MultResponse.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\QueryRequest.cs" />
     <Compile Include="Models\QueryResponse.cs" />
+    <Compile Include="Models\SqrtRequest.cs" />
+    <Compile Include="Models\SqrtResponse.cs" />
     <Compile Include="Models\SubRequest.cs" />
     <Compile Include="Models\SubResponse.cs" />
     <Compile Include="Program.cs" />
